add video list creation

--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,14 @@
 </head>
 
 <body>
+  <h1>Custom Youtube</h1>
   <form class="form" action="get">
-    <input class="input" type="text">
-    <button class="submit" type="submit"></button>
+    <input class="input" type="text" placeholder="Search...">
+    <button class="submit-button" type="submit">Search</button>
   </form>
-  <script src="/src/index.js"></script>
+  <script type="module" src="/src/index.js"></script>
+
+
 </body>
 
 </html>
