--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <title>Custom Youtube</title>
 </head>
 
 <body>
-  <h1>Custom Youtube</h1>
-  <form class="form" action="get">
-    <input class="input" type="text" placeholder="Search...">
-    <button class="submit-button" type="submit">Search</button>
-  </form>
-
+  <div class="container d-flex flex-wrap justify-content-center">
+    <h1 class="text-center text-danger">Custom Youtube</h1>
+    <form class="form input-group mb-3" action="get">
+      <input class="input form-control" type="text" placeholder="Search...">
+      <button class="btn btn-danger" type="submit">Search</button>
+    </form>
+  </div>
   <script type="module" src="/src/index.js"></script>
 </body>
 
