--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <button class="btn btn-danger" type="submit">Search</button>
     </form>
   </div>
-  <script type="module" src="/src/index.js"></script>
+  <script type="module" src="src/index.js"></script>
 </body>
 
 </html>
