--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="src/styles.css">
   <title>Custom Youtube</title>
 </head>
 
 <body>
-  <div class="container d-flex flex-wrap justify-content-center">
+  <div class="cu-container container d-flex flex-wrap justify-content-center">
     <h1 class="text-center text-danger">Custom Youtube</h1>
     <form class="form input-group mb-3" action="get">
       <input class="input form-control" type="text" placeholder="Search...">
